--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ services:
     environment:
       - CASSANDRA_BROADCAST_ADDRESS=10.42.42.42
     ports:
-      - 7000:7000
+      - 9042:9042
     volumes:
       - cassandra_volume:/var/lib/cassandra
+    mem_limit: 5g
 
 volumes:
   cassandra_volume:
